--- a/mcarbonPortal/src/app/form-dialog/form-dialog.component.html
+++ b/mcarbonPortal/src/app/form-dialog/form-dialog.component.html
@@ -284,42 +284,25 @@
             </div>
           </section>
         </div> -->
-        <div class="row">
-          <section class="example-section">
-            <div *ngFor="let feature of featuresData" class="row">
-              <div class="col-md-4 offset-md-1">
-                <mat-checkbox
-                  [value]="feature.featureId"
-                  (change)="toggleFeatureSelection(feature.featureId)"
-                >
-                  {{ feature.name }}
-                </mat-checkbox>
-              </div>
-              <!-- <div class="col-md-6" *ngIf="feature.showMeta">
-                <div class="row">
-                  <mat-form-field
-                    *ngFor="let meta of feature.selectedMetaList"
-                    class="col-md-6"
-                  >
-                    <input
-                      matInput
-                      type="{{meta.type}}"
-                      placeholder="{{ meta.value.name }}"
-                      #metaValue
-                      (change)="
-                        setMetaValue(
-                          feature.featureId,
-                          meta.value.key,
-                          metaValue.value
-                        )
-                      "
-                    />
-                  </mat-form-field>
-                </div>
-              </div> -->
+        <section class="feature-section">
+          <div class="grid-container">
+            <div
+              *ngFor="let feature of featuresData1"
+              class="grid-item"
+              id="feature{{ feature.featureId }}"
+              [ngClass]="{
+                expanded: selectedFeatures.includes(feature.featureId)
+              }"
+            >
+              <mat-checkbox
+                [value]="feature.featureId"
+                (change)="toggleFeatureSelection(feature.featureId)"
+              >
+                {{ feature.name }}
+              </mat-checkbox>
 
               <div
-                class="col-md-6 offset-md-1"
+                class="grid-item-content"
                 *ngIf="selectedFeatures.includes(feature.featureId)"
               >
                 <div *ngFor="let meta of feature.metaList">
@@ -343,6 +326,7 @@
                         type="file"
                         id="{{ meta.key }}"
                         name="{{ meta.key }}"
+                        accept="video/*"
                         (change)="
                           onFileInputChange($event, meta, feature.featureId)
                         "
@@ -362,13 +346,83 @@
                             metaValue.value
                           )
                         "
-                    /></mat-form-field>
+                      />
+                    </mat-form-field>
                   </ng-container>
                 </div>
               </div>
             </div>
-          </section>
-        </div>
+          </div>
+
+          <div class="grid-container">
+            <div
+              *ngFor="let feature of featuresData2"
+              class="grid-item"
+              id="feature{{ feature.featureId }}"
+              [ngClass]="{
+                expanded: selectedFeatures.includes(feature.featureId)
+              }"
+            >
+              <mat-checkbox
+                [value]="feature.featureId"
+                (change)="toggleFeatureSelection(feature.featureId)"
+              >
+                {{ feature.name }}
+              </mat-checkbox>
+
+              <div
+                class="grid-item-content"
+                *ngIf="selectedFeatures.includes(feature.featureId)"
+              >
+                <div *ngFor="let meta of feature.metaList">
+                  <ng-container [ngSwitch]="meta.type">
+                    <mat-slide-toggle
+                      *ngSwitchCase="'bool'"
+                      (change)="
+                        setMetaValue(
+                          feature.featureId,
+                          meta.key,
+                          $event.checked
+                        )
+                      "
+                    >
+                      {{ meta.name }}
+                    </mat-slide-toggle>
+
+                    <div *ngSwitchCase="'file'">
+                      <label for="{{ meta.key }}">{{ meta.name }}</label>
+                      <input
+                        type="file"
+                        id="{{ meta.key }}"
+                        name="{{ meta.key }}"
+                        accept="video/*"
+                        (change)="
+                          onFileInputChange($event, meta, feature.featureId)
+                        "
+                      />
+                    </div>
+
+                    <mat-form-field *ngSwitchCase="'text'">
+                      <input
+                        matInput
+                        #metaValue
+                        type="text"
+                        placeholder="{{ meta.name }}"
+                        (change)="
+                          setMetaValue(
+                            feature.featureId,
+                            meta.key,
+                            metaValue.value
+                          )
+                        "
+                      />
+                    </mat-form-field>
+                  </ng-container>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
 
         <div class="row" *ngIf="emptyField">
           <div class="col-md-6 offset-md-3 text-center">
