--- a/mcarbonPortal/src/app/update-account-dialog/update-account-dialog.component.html
+++ b/mcarbonPortal/src/app/update-account-dialog/update-account-dialog.component.html
@@ -1,7 +1,7 @@
 <div class="card card-1">
   <div class="card-header card-header-danger">
     <h4 class="card-title">
-      {{title}}
+      {{ title }}
       <button mat-icon-button mat-dialog-close class="close-btn">
         <mat-icon aria-label="Close dialog">close</mat-icon>
       </button>
@@ -192,86 +192,27 @@
             <mat-label class="label">Select the features you want:</mat-label>
           </div>
         </div>
-        <!-- <div class="row">
-          <section class="example-section">
-            <div *ngFor="let feature of featuresData" class="row">
-              <div class="col-md-4 offset-md-1">
-                <mat-checkbox
-                  [value]="feature.featureId"
-                  [checked]="isCheckFeature(feature)"
-                  (change)="
-                    showMetaList(feature, $event.checked);
-                    updateSelectedFeaturesMeta(
-                      feature.featureId,
-                      feature.metaList
-                    )
-                  "
-                >
-                  {{ feature.name }}
-                </mat-checkbox>
-              </div>
-              <div class="col-md-6" *ngIf="isCheckFeature(feature)">
-                <div class="row">
-                  <mat-form-field
-                    *ngFor="let meta of feature.selectedMetaList"
-                    class="col-md-6"
-                  >
-                    <input
-                      matInput
-                      value="{{ meta.value }}"
-                      placeholder="{{ meta.key }}"
-                      #metaValue
-                      (change)="
-                        setMetaValue(
-                          feature.featureId,
-                          meta.key,
-                          metaValue.value
-                        )
-                      "
-                    />
-                  </mat-form-field>
-                </div>
-              </div>
-            </div>
-          </section>
-        </div> -->
-        <div class="row">
-          <section class="example-section">
-            <div *ngFor="let feature of featuresData" class="row">
-              <div class="col-md-4 offset-md-1">
-                <mat-checkbox
-                  [value]="feature.featureId"
-                  [checked]="isCheckFeature(feature)"
-                  (change)="toggleFeatureSelection(feature.featureId)"
-                >
-                  {{ feature.name }}
-                </mat-checkbox>
-              </div>
-              <!-- <div class="col-md-6" *ngIf="feature.showMeta">
-                <div class="row">
-                  <mat-form-field
-                    *ngFor="let meta of feature.selectedMetaList"
-                    class="col-md-6"
-                  >
-                    <input
-                      matInput
-                      type="{{meta.type}}"
-                      placeholder="{{ meta.value.name }}"
-                      #metaValue
-                      (change)="
-                        setMetaValue(
-                          feature.featureId,
-                          meta.value.key,
-                          metaValue.value
-                        )
-                      "
-                    />
-                  </mat-form-field>
-                </div>
-              </div> -->
+
+        <section class="feature-section">
+          <div class="grid-container">
+            <div
+              *ngFor="let feature of featuresData1"
+              class="grid-item"
+              id="feature{{ feature.featureId }}"
+              [ngClass]="{
+                expanded: selectedFeatures.includes(feature.featureId)
+              }"
+            >
+              <mat-checkbox
+                [value]="feature.featureId"
+                [checked]="isCheckFeature(feature)"
+                (change)="toggleFeatureSelection(feature.featureId)"
+              >
+                {{ feature.name }}
+              </mat-checkbox>
 
               <div
-                class="col-md-6 offset-md-1"
+                class="grid-item-content"
                 *ngIf="
                   (selectedFeatures.includes(feature.featureId) ||
                     isCheckFeature(feature)) &&
@@ -302,6 +243,7 @@
                         type="file"
                         id="{{ meta.key }}"
                         name="{{ meta.key }}"
+                        accept="video/*"
                         (change)="
                           onFileInputChange($event, meta, feature.featureId)
                         "
@@ -324,114 +266,96 @@
                             metaValue.value
                           )
                         "
-                    /></mat-form-field>
+                      />
+                    </mat-form-field>
                   </ng-container>
                 </div>
               </div>
             </div>
-          </section>
-        </div>
+          </div>
+
+          <div class="grid-container">
+            <div
+              *ngFor="let feature of featuresData2"
+              class="grid-item"
+              id="feature{{ feature.featureId }}"
+              [ngClass]="{
+                expanded: selectedFeatures.includes(feature.featureId)
+              }"
+            >
+              <mat-checkbox
+                [value]="feature.featureId"
+                [checked]="isCheckFeature(feature)"
+                (change)="toggleFeatureSelection(feature.featureId)"
+              >
+                {{ feature.name }}
+              </mat-checkbox>
+
+              <div
+                class="grid-item-content"
+                *ngIf="
+                  (selectedFeatures.includes(feature.featureId) ||
+                    isCheckFeature(feature)) &&
+                  selectedFeaturesMeta[feature.featureId]
+                "
+              >
+                <div *ngFor="let meta of feature.metaList">
+                  <ng-container [ngSwitch]="meta.type">
+                    <mat-slide-toggle
+                      checked="{{
+                        selectedFeaturesMeta[feature.featureId][meta.key]
+                      }}"
+                      *ngSwitchCase="'bool'"
+                      (change)="
+                        setMetaValue(
+                          feature.featureId,
+                          meta.key,
+                          $event.checked
+                        )
+                      "
+                    >
+                      {{ meta.name }}
+                    </mat-slide-toggle>
+
+                    <div *ngSwitchCase="'file'">
+                      <label for="{{ meta.key }}">{{ meta.name }}</label>
+                      <input
+                        type="file"
+                        id="{{ meta.key }}"
+                        name="{{ meta.key }}"
+                        accept="video/*"
+                        (change)="
+                          onFileInputChange($event, meta, feature.featureId)
+                        "
+                      />
+                    </div>
+
+                    <mat-form-field *ngSwitchCase="'text'">
+                      <input
+                        value="{{
+                          selectedFeaturesMeta[feature.featureId][meta.key]
+                        }}"
+                        matInput
+                        #metaValue
+                        type="text"
+                        placeholder="{{ meta.name }}"
+                        (change)="
+                          setMetaValue(
+                            feature.featureId,
+                            meta.key,
+                            metaValue.value
+                          )
+                        "
+                      />
+                    </mat-form-field>
+                  </ng-container>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
       </div>
     </mat-tab>
-
-    <!-- <mat-tab label="User Information">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-5 offset-md-1">
-            <mat-form-field>
-              <input
-                matInput
-                type="text"
-                placeholder="First Name"
-                formControlName="user_fname"
-              />
-            </mat-form-field>
-          </div>
-          <div class="col-md-5">
-            <mat-form-field>
-              <input
-                matInput
-                type="text"
-                placeholder="Last Name"
-                formControlName="user_lname"
-              />
-            </mat-form-field>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-5 offset-md-1">
-            <mat-form-field>
-              <input
-                matInput
-                type="tel"
-                placeholder="Mobile Number"
-                formControlName="mobile"
-              />
-            </mat-form-field>
-          </div>
-          <div class="col-md-5">
-            <mat-form-field>
-              <input
-                matInput
-                type="email"
-                placeholder="Email"
-                formControlName="email"
-              />
-            </mat-form-field>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-md-5 offset-md-1">
-            <mat-form-field>
-              <input
-                matInput
-                type="text"
-                placeholder="Login ID"
-                formControlName="login_id"
-              />
-            </mat-form-field>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-md-5 offset-md-1">
-            <mat-form-field>
-              <input
-                matInput
-                type="password"
-                placeholder="Password"
-                formControlName="password"
-                [(ngModel)]="password"
-              />
-            </mat-form-field>
-          </div>
-          <div class="col-md-5">
-            <mat-form-field>
-              <input
-                matInput
-                type="password"
-                placeholder="Confirm Password"
-                formControlName="confirm_password"
-                [(ngModel)]="confirm_password"
-              />
-              <mat-error
-                *ngIf="userForm.hasError('mismatch', 'confirm_password')"
-                >Passwords do not match</mat-error
-              >
-            </mat-form-field>
-          </div>
-        </div>
-
-        <div class="row" *ngIf="nameError">
-          <div class="col-md-6 offset-md-3 text-center">
-            <p class="alert alert-danger">
-              <strong>All fields are mandatory</strong>
-            </p>
-          </div>
-        </div>
-      </div>
-    </mat-tab> -->
   </mat-tab-group>
 
   <div mat-dialog-actions align="end" class="actions">
