--- a/mcarbonPortal/src/app/form-dialog/form-dialog.component.scss
+++ b/mcarbonPortal/src/app/form-dialog/form-dialog.component.scss
@@ -138,3 +138,20 @@ img {
 .example-section {
   width: 100%;
 }
+
+.feature-section {
+  display: flex;
+  padding-left: 10%;
+}
+
+.grid-container {
+  display: flex;
+  flex-direction: column;
+  grid-template-columns: repeat(2, 1fr);
+  grid-auto-rows: min-content;
+  width: 50%;
+}
+
+.grid-item {
+  width: 90%;
+}
