--- a/mcarbonPortal/src/app/update-account-dialog/update-account-dialog.component.scss
+++ b/mcarbonPortal/src/app/update-account-dialog/update-account-dialog.component.scss
@@ -145,3 +145,20 @@ img {
   font-weight: bolder;
   font-size: 1rem;
 }
+
+.feature-section {
+  display: flex;
+  padding-left: 10%;
+}
+
+.grid-container {
+  display: flex;
+  flex-direction: column;
+  grid-template-columns: repeat(2, 1fr);
+  grid-auto-rows: min-content;
+  width: 50%;
+}
+
+.grid-item {
+  width: 90%;
+}
