--- a/openvidu-call/openvidu-call-front/src/app/components/call/call.component.html
+++ b/openvidu-call/openvidu-call-front/src/app/components/call/call.component.html
@@ -41,7 +41,7 @@
 	[toolbarPublishVideoButton]="false"
 	[toolbarVideoControlButton]="false"
 	[toolbarRecordingButton]="true"
-	[toolbarDisplayLogo]="true"
+	[toolbarDisplayLogo]="showLogo"
 	[toolbarDisplaySessionName]="true"
 	[streamDisplayParticipantName]="true"
 	[displayTickerName]="description"
@@ -50,6 +50,7 @@
 	[sessionDuration]="sessionDuration"
 	[toolbarDisplayTimer]="displayTimer"
 	[toolbarDisplayLogoValue]="logo"
+	[floatingLayout]="floatingLayout"
 >
 </ov-videoconference>
 
